# sgm-kriging-models

./: .bumpversion.cfg  .dockerignore  .gitignore  Dockerfile  README.md  build.sh  index.yaml  pyproject.toml  requirements.R  sgm-kriging-models-0.1.1.tgz  test.ipynb
.github/workflows/: ci.yaml  release.yaml
charts/sgm-kriging-models/: Chart.yaml  values.yaml
charts/sgm-kriging-models/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/sgm-kriging-models/templates/tests/: test-connection.yaml
requirements/: requirements.R  requirements.txt
sgm_kriging_models/: ModelPredictionService.py  __init__.py  main.py
sgm_kriging_models/Rscripts/: kriging.R
sgm_kriging_models/models/: ParameterInput.py  PredictionInput.py  PredictionOutput.py  TargetFunctions.py  TrainModel.py
src/: ModelPredictionService.py  main.py
src/models/: ParameterInput.py
test/: __init__.py  test.py
test/data/: Versuchsdaten_v01_complete.CSV  cleaned_aggregated_v2_sgm-keyorganizer.csv
